# unlambda

./: .gitignore  CMakeLists.txt  README.md
examples/: hello_world.unlasm
src/: CMakeLists.txt  argparse.c  argparse.h  array.c  array.h  asm.c  asm.h  brkpt.c  brkpt.h  dbgcmd.c  dbgcmd.h  debug.c  debug.h  fileio.c  fileio.h  logging.c  logging.h  stack.c  stack.h  symtab.c  symtab.h  unl.c  unlasm.c  unlcc.c  vm.c  vm.h  vm_image.c  vm_image.h  vm_instructions.c  vm_instructions.h  vmmem.c  vmmem.h
test/: CMakeLists.txt  argparse_tests.cpp  array_tests.cpp  asm_tests.cpp  brkpt_tests.cpp  dbgcmd_tests.cpp  debug_tests.cpp  fileio_tests.cpp  logging_tests.cpp  stack_tests.cpp  symtab_tests.cpp  testing_utils.cpp  testing_utils.hpp  vm_image_tests.cpp  vm_instructions_tests.cpp  vm_tests.cpp  vmmem_tests.cpp
